Added full profiles routes/logic in backend
